Fix overlap

--- a/style/page.scss
+++ b/style/page.scss
@@ -38,6 +38,7 @@ a {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  z-index: 98;
   @include mobile {
     position: relative;
     display: block;
